# rust-shell

./: Cargo.toml  README.md
src/: constants.rs  lib.rs
src/commands/builtins/: cd.rs  mod.rs  pwd.rs
src/parser/: error.rs  mod.rs  parser.rs
src/terminal/: action.rs  buffer.rs  cursor.rs  handler.rs  history.rs  mod.rs  reader.rs  signal.rs  terminal.rs  window.rs
src/tokens/: command.rs  input.rs  mod.rs  output.rs  tokens.rs
