[package]
name = "shell"
version = "0.1.0"
authors = ["plaxi0s <pawan.dogra99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termios = "0.3.2"
libc = "0.2.78"
nix = "0.18.0"
lazy_static = "1.4.0"
termion = "1.5.5"
